<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"

        android:fontFamily="sans-serif"
        android:text="@string/weather"
        android:textColor="@color/colorHeaderWeather"
        android:textSize="@dimen/weather"
        app:layout_constraintBottom_toTopOf="@+id/volume"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewDate"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"

        android:fontFamily="sans-serif"
        android:text="@string/textViewDate"
        android:textColor="@color/colorHeaderWeather"
        android:textSize="@dimen/textViewDate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/volume"
        app:layout_constraintVertical_bias="0.068" />

    <TextView
        android:id="@+id/volume"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="sans-serif"

        android:text="@string/degree"
        android:textColor="@color/colorHeaderWeather"
        android:textSize="@dimen/degree"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.251" />

    <TextView
        android:id="@+id/celcium"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"

        android:fontFamily="sans-serif"
        android:text="@string/celcium"
        android:textColor="@color/colorHeaderWeather"
        android:textSize="@dimen/celcium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.69"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/volume"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.32" />

    <TextView
        android:id="@+id/typeOfWeather"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:textColor="@color/colorHeaderWeather"
        app:layout_constraintBottom_toTopOf="@+id/volume"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header"
        tools:text="@string/typeOfWear" />

    <TextView
        android:id="@+id/city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/city"
        android:textColor="@color/colorHeaderWeather"
        app:layout_constraintBottom_toTopOf="@+id/header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/typeOfWind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/textViewWind"
        android:textColor="@color/colorHeaderWeather"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDate"
        app:layout_constraintVertical_bias="0.119"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ListView
            android:id="@+id/countriesList"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

</LinearLayout>